--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ subjects:
 - !lcsh 'Great Britain -- History -- Fiction'
 - !lcsh 'Space and time -- Fiction'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: Puck's song -- Weland's sword -- A tree song -- Young men at the
   manor -- Sir Richard's song -- Harp song of the Dane women -- The knights of the
   joyous venture -- Thorkild's song -- Old men at Pevensey -- The runes on Weland's
